--- a/notebooks/Assignment 4.Rmd
+++ b/notebooks/Assignment 4.Rmd
@@ -2,7 +2,9 @@
 title: "Assignment 4"
 author: "Victor Torres"
 date: "2025-05-10"
-output: html_document
+output:
+  word_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
